Added new sponsors

--- a/index.html
+++ b/index.html
@@ -174,22 +174,27 @@
         <div style="width: 90%; margin: auto auto;" class="row">
             <div class="container col-lg-8 col-lg-offset-2">
                 <h2>Headline Sponsor</h2>
-                <div class="col-sm-12 img-container">
-                  <a href="http://bloomberg.com/RD">
-                    <img style="margin: auto auto" class="img-responsive" src="img/bloomberg-logo.png"/>
-                  </a>
+          <div class="col-sm-12 img-container">
+            <a href="http://bloomberg.com/RD">
+              <img style="margin: auto auto" class="img-responsive" src="img/bloomberg-logo.png"/>
+            </a>
+          </div>
+        </div>
         <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-8 col-lg-offset-2">
-                <h2>Core Sponsors</h2>
+            <h2>Core Sponsors</h2>
             <div class="container col-sm-12">
-                <div class="col-sm-offset-2 col-sm-8 img-container">
-                    <a  style="width: 50%;" href="http://www.nationalrailmuseum.co.uk/">
+                <div class="col-sm-6 img-container">
+                    <a  style="width: 100%;" href="http://www.nationalrailmuseum.co.uk/">
                         <img style="width: 50%;" src="img/nrmwhite.png"/>
                     </a>
                 </div>
-            </div>
-            </div>
-        </div>
-        </div>
+                <div class="col-sm-6 img-container">
+                    <a  style="width: 100%;" href="http://www.networkrail.co.uk/">
+                        <img style="width: 50%;" src="img/logo-networkrail.png"/>
+                    </a>
+                </div>
+              </div>
+          </div>
         <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-8 col-lg-offset-2">
             <h2>Transport Sponsors</h2>
             <div class="container col-sm-12">
@@ -205,31 +210,6 @@
                 </div>
             </div>
         </div>
-
-        <div style="padding-top:200px; padding-bottom: 200px" class="container col-sm-6 col-sm-offset-3">
-            <h2>Partners</h2>
-            <div class="container col-sm-6">
-                <div class="col-sm-12 img-container">
-                    <a  style="width: 80%;" href="http://github.com/plans">
-                        <img style="width: 80%;" src="img/github-logo.png"/>
-                    </a>
-                </div>
-            </div>
-            <div class="container col-sm-6">
-                <div class="col-sm-12 img-container">
-                    <a  style="width: 40%;" href="http://bynifty.com/">
-                        <img style="width: 40%;" src="img/logo-nifty.png"/>
-                    </a>
-                </div>
-            </div>
-            <div class="container col-sm-6">
-                <div class="col-sm-12 img-container">
-                    <a  style="width: 100%;" href="http://www.meetup.com/UK-Hackathons-and-Jams/">
-                        <img style="width: 100%;" src="img/hackathonsandjams-logo.png"/>
-                    </a>
-                </div>
-            </div>
-        </div>
     </section>
 
     <!-- <section id="partners" class="container-wide content-section text-center">
@@ -241,38 +221,69 @@
         </div>
     </section> -->
 
-    <section style="margin-top: 200px" id="partners" class="container-wide content-section text-center organisational container">
+    <section id="partners" class="container-wide content-section text-center organisational container">
         <div class="row">
-            <div class="col-lg-12">
-                <h2> ORGANISATIONAL PARTNERS</h2>
-                <div class="container col-sm-12">
-                    <div class="col-sm-4 img-container">
-                        <a href="http://www.york.gov.uk/">
-                            <img class="img-responsive" src="img/logo-york.png"/>
-                        </a>
-                    </div>
-                    <div class="col-sm-4 img-container">
-                        <a href="http://scy.co.uk/">
-                            <img class="img-responsive" style="width:50%; margin:0 auto" src="img/logo-scy.png"/>
-                        </a>
-                    </div>
-                    <div class="col-sm-4 img-container">
-                        <a href="https://productforge.io">
-                            <img class="img-responsive" style="padding-top:40px" src="img/productforge.png"/>
-                        </a>
-                    </div>
-                    <div class="col-sm-6 img-container">
-                        <a href="http://www.dotforgeaccelerator.com/">
-                            <img class="img-responsive" style="margin: 0 auto; padding-top:30px; width:80%" src="img/logo-dotforge.png"/>
-                        </a>
-                    </div>
-                    <div class="col-sm-6 img-container">
-                        <a href="http://hackaglobal.com/">
-                            <img class="img-responsive" src="img/logo-hg.png"/>
-                        </a>
-                    </div>
-                </div>
-            </div>
+          <div class="col-md-6">
+              <h2>Partners</h2>
+              <div class="container col-sm-6">
+                  <div class="col-sm-12 img-container">
+                      <a  style="width: 80%;" href="http://github.com/plans">
+                          <img style="width: 80%;" src="img/github-logo.png"/>
+                      </a>
+                  </div>
+              </div>
+              <div class="container col-sm-6">
+                  <div class="col-sm-12 img-container">
+                      <a  style="width: 40%;" href="http://bynifty.com/">
+                          <img style="width: 40%;" src="img/logo-nifty.png"/>
+                      </a>
+                  </div>
+              </div>
+              <div class="container col-sm-6">
+                  <div class="col-sm-12 img-container">
+                      <a  style="width: 100%;" href="http://www.meetup.com/UK-Hackathons-and-Jams/">
+                          <img style="width: 100%;" src="img/hackathonsandjams-logo.png"/>
+                      </a>
+                  </div>
+              </div>
+              <div class="container col-sm-6">
+                  <div class="col-sm-12 img-container">
+                      <a  style="width: 100%;" href="http://clarity.pr/">
+                          <img style="width: 100%;" src="img/logo-clarity.png"/>
+                      </a>
+                  </div>
+              </div>
+          </div>
+          <div class="col-md-6">
+              <h2> ORGANISATIONAL PARTNERS</h2>
+              <div class="container col-sm-12">
+                  <div class="col-sm-4 img-container">
+                      <a href="http://www.york.gov.uk/">
+                          <img class="img-responsive" src="img/logo-york.png"/>
+                      </a>
+                  </div>
+                  <div class="col-sm-4 img-container">
+                      <a href="http://scy.co.uk/">
+                          <img class="img-responsive" style="width:50%; margin:0 auto" src="img/logo-scy.png"/>
+                      </a>
+                  </div>
+                  <div class="col-sm-4 img-container">
+                      <a href="https://productforge.io">
+                          <img class="img-responsive" style="padding-top:40px" src="img/productforge.png"/>
+                      </a>
+                  </div>
+                  <div class="col-sm-6 img-container">
+                      <a href="http://www.dotforgeaccelerator.com/">
+                          <img class="img-responsive" style="margin: 0 auto; padding-top:30px; width:80%" src="img/logo-dotforge.png"/>
+                      </a>
+                  </div>
+                  <div class="col-sm-6 img-container">
+                      <a href="http://hackaglobal.com/">
+                          <img class="img-responsive" src="img/logo-hg.png"/>
+                      </a>
+                  </div>
+              </div>
+          </div>
         </div>
     </section>
     <!-- <section id="speakers" class="content-section text-center">
