aadded clarity logo

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
               <div class="container col-sm-6">
                   <div class="col-sm-12 img-container">
                       <a  style="width: 100%;" href="http://clarity.pr/">
-                          <img style="width: 100%;" src="img/logo-claritylogo.png"/>
+                          <img style="width: 100%;" src="img/logo-clarity.png"/>
                       </a>
                   </div>
               </div>
