--- a/index.html
+++ b/index.html
@@ -183,14 +183,19 @@
         <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-8 col-lg-offset-2">
             <h2>Core Sponsors</h2>
             <div class="container col-sm-12">
-                <div class="col-sm-6 img-container">
+                <div class="col-sm-4 img-container">
                     <a  style="width: 100%;" href="http://www.nationalrailmuseum.co.uk/">
                         <img style="width: 50%;" src="img/nrmwhite.png"/>
                     </a>
                 </div>
-                <div class="col-sm-6 img-container">
+                <div class="col-sm-4 img-container">
                     <a  style="width: 100%;" href="http://www.networkrail.co.uk/">
-                        <img style="width: 50%;" src="img/logo-networkrail.png"/>
+                        <img style="width: 100%;" src="img/logo-networkrail.png"/>
+                    </a>
+                </div>
+                <div class="col-sm-4 img-container">
+                    <a  style="width: 100%;" href="http://www.networkrail.co.uk/">
+                        <img style="width: 100%;" src="img/logo-nre.png"/>
                     </a>
                 </div>
               </div>
