made golden logos larger@

--- a/index.html
+++ b/index.html
@@ -180,7 +180,7 @@
             </a>
           </div>
         </div>
-        <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-8 col-lg-offset-2">
+        <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-12">
             <h2>Core Sponsors</h2>
             <div class="container col-sm-12">
                 <div class="col-sm-4 img-container">
