--- a/index.html
+++ b/index.html
@@ -677,7 +677,7 @@
     </div>
 
 
-    <section id="meetup" class="container-wide content-section text-center" style="clear: both">
+    <section id="launch" class="container-wide content-section text-center" style="clear: both">
         <div class="row">
             <div class="col-md-8 col-md-offset-2">
                 <h2>Join Us For Our HackTrain Kick-Off Event In London - 27th March</h2>
