--- a/index.html
+++ b/index.html
@@ -181,21 +181,34 @@
           </div>
         </div>
         <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-12">
-            <h2>Core Sponsors</h2>
+            <h2>Golden Sponsors</h2>
+            <div class="container col-sm-12 col-md-8 col-md-offset-2">
+                <div class="col-sm-12 img-container">
+                    <a  style="width: 100%;" href="http://www.accenture.com/">
+                        <img style="width: 50%; margin: auto auto;" src="img/accenture.png"/>
+                    </a>
+                </div>
+              </div>
+            <h2 style="margin-top: 300px">Silver Sponsors</h2>
             <div class="container col-sm-12">
-                <div class="col-sm-4 img-container">
+                <div class="col-sm-3 img-container">
                     <a  style="width: 100%;" href="http://www.nationalrailmuseum.co.uk/">
                         <img style="width: 50%;" src="img/nrmwhite.png"/>
                     </a>
                 </div>
-                <div class="col-sm-4 img-container">
+                <div class="col-sm-3 img-container">
                     <a  style="width: 100%;" href="http://www.networkrail.co.uk/">
                         <img style="width: 100%;" src="img/logo-networkrail.png"/>
                     </a>
                 </div>
-                <div class="col-sm-4 img-container">
+                <div class="col-sm-3 img-container">
                     <a  style="width: 100%;" href="http://www.networkrail.co.uk/">
                         <img style="width: 100%;" src="img/logo-nre.png"/>
+                    </a>
+                </div>
+                <div class="col-sm-3 img-container">
+                    <a  style="width: 100%;" href="http://www.networkrail.co.uk/">
+                        <img style="width: 100%;" src="img/logo-nomad.png"/>
                     </a>
                 </div>
               </div>
