removed applications, etc.

--- a/index.html
+++ b/index.html
@@ -94,18 +94,7 @@
                         <a class="page-scroll" href="#journey">Journey</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#meetup">Meetup</a>
-                    </li>
-                    <li>
                         <a class="page-scroll" href="#prizes">Prizes</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll" href="#team">Team</a>
-                    </li>
-                    <li>
-                        <a class="page-scroll btn btn-info" href="#apply">
-                            Apply Now!
-                        </a>
                     </li>
                     <li style="width: 150px; position: relative;">
                       <a href="http://bloomberg.com/RD">
@@ -202,12 +191,12 @@
                     </a>
                 </div>
                 <div class="col-sm-3 img-container">
-                    <a  style="width: 100%;" href="http://www.networkrail.co.uk/">
+                    <a  style="width: 100%;" href="http://www.nationalrail.co.uk/">
                         <img style="width: 100%;" src="img/logo-nre.png"/>
                     </a>
                 </div>
                 <div class="col-sm-3 img-container">
-                    <a  style="width: 100%;" href="http://www.networkrail.co.uk/">
+                    <a  style="width: 100%;" href="http://nomad-digital.com/">
                         <img style="width: 100%;" src="img/logo-nomad.png"/>
                     </a>
                 </div>
@@ -690,17 +679,6 @@
     </div>
 
 
-    <section id="launch" class="container-wide content-section text-center" style="clear: both">
-        <div class="row">
-            <div class="col-md-8 col-md-offset-2">
-                <h2>Join Us For Our HackTrain Kick-Off Event In London - 27th March</h2>
-                <div style="width:100%; text-align:left;" >
-                  <iframe src="http://eventbrite.co.uk/tickets-external?eid=15992358575&ref=etckt" frameborder="0" height="256" width="100%" vspace="0" hspace="0" marginheight="5" marginwidth="5" scrolling="auto" allowtransparency="true"></iframe>
-                </div>
-            </div>
-        </div>
-    </div>
-
     <section id="prizes" class="container content-section text-center">
         <div id="type-form-parent" class="row">
             <img width="100%" src="img/prizes.png" />
@@ -838,15 +816,6 @@
                         </li>
                     </ul>
                 </div>
-            </div>
-        </div>
-    </section>
-
-    <section id="apply" class="container content-section text-center">
-        <div id="type-form-parent" class="row">
-            <h1>APPLY NOW!</h1>
-            <div class="col-md-12" style="background: white; border-radius: 30px; padding: 10px 10px 10px 10px; height: 700px">
-                <iframe id="typeform-full" width="100%" height="100%" frameborder="0" src="" style="display:none;"></iframe>
             </div>
         </div>
     </section>
