--- a/trainhackers.html
+++ b/trainhackers.html
@@ -102,6 +102,12 @@
 
         <div id="main">
             <div class="content-area" id="primary">
+                <h1>
+                    About
+                </h1>
+                <p>
+                    In this page you will be able to find all information related to the HackTrain 2015 journey.
+                </p>
                 <h1> APIs </h1>
                 <br>
                 <br>
