--- a/index.html
+++ b/index.html
@@ -172,9 +172,14 @@
         <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-12">
             <h2>Golden Sponsors</h2>
             <div class="container col-sm-12 col-md-8 col-md-offset-2">
-                <div class="col-sm-12 img-container">
+                <div class="col-sm-6 img-container">
                     <a  style="width: 100%;" href="http://www.accenture.com/">
-                        <img style="width: 50%; margin: auto auto;" src="img/index/accenture.png"/>
+                        <img style="width: 100%; margin: auto auto;" src="img/index/accenture.png"/>
+                    </a>
+                </div>
+                <div class="col-sm-6 img-container">
+                    <a  style="width: 100%;" href="http://www.thetrainline.co.uk/">
+                        <img style="width: 100%; margin: auto auto;" src="img/index/logo-ttl.png"/>
                     </a>
                 </div>
               </div>
