--- a/index.html
+++ b/index.html
@@ -125,27 +125,6 @@
                     </div>
                 </div>
             </div>
-        </div>
-    </header>
-
-    <!-- About Section -->
-    <section id="about" class="container content-section text-center">
-        <div class="row">
-            <div class="col-lg-8 col-lg-offset-2">
-                <h2>An Experience Like No Other.</h2>
-                <p>
-                    HackTrain is the first ever train hackathon in Europe! An unforgettable experience where 40 of the best developers from all around Europe will revolutionize the world! Jump on board the HackTrain for a once in a lifetime journey, travel to the top tech spaces in the UK, hang out with the market makers in the Startup ecosystem, and create startups that will revolutionize the world!
-                </p>
-                <p>
-                    Thanks to our strong partnership with the largest train companies in the UK, including East Midland Trains and Virgin Trains East Coast, hackers will be turning pizza into software whilst on an executive First Class Journey!
-                </p>
-                <p>
-                    Startups, apps, prototypes will be created, and presented in front of CEOs, investors, serial entrepreneurs and evangelists - all with the objective of becoming the 2015 HackTrain champion! With TrainHackers from UK, Russia, Romania, France, Poland, Czech Republic together with many other European countries, this hackathon will certainly promise a unique experience!
-                </p>
-                <p>
-                    Crazy? Definitely! Impossible? Not even close! Many individuals rocked our past events, creating mind blowing and revolutionary concepts! Some of our past events include <a href="http://uk.startupbus.com/">Startup Bus UK 2014</a>, <a href="http://moscow.startupweekend.org/">Startup Weekend Moscow</a>, <a href="https://twitter.com/startuphacksco/">Startup Hacks</a>.
-                </p>
-            </div>
 
             <ul class="list-inline banner-social-buttons col-sm-12">
                 <li class="col-sm-6">
@@ -156,6 +135,43 @@
                     <a href="https://facebook.com/TheHackTrain" class="btn btn-default btn-lg col-sm 6"><i class="fa fa-facebook fa-fw"></i> <span class="network-name">/ TheHackTrain</span></a>
                 </li>
             </ul>
+        </div>
+    </header>
+
+    <!-- About Section -->
+    <section id="about" class="container content-section text-center">
+        <div class="row">
+
+            <div class="col-lg-8 col-lg-offset-2">
+                <h2>An Experience Like No Other.</h2>
+                <p>
+                    HackTrain is the first ever train hackathon in Europe! An unforgettable experience where 40 of the best developers from all around Europe will revolutionize the world! Jump on board the HackTrain for a once in a lifetime journey, travel to the top tech spaces in the UK, hang out with the market makers in the Startup ecosystem, and create startups that will revolutionize the world!
+                </p>
+                <p>
+                    Startups, apps, prototypes will be created, and presented in front of CEOs, investors, serial entrepreneurs and evangelists - all with the objective of becoming the 2015 HackTrain champion! With TrainHackers from UK, Russia, Romania, France, Poland, Czech Republic together with many other European countries, this hackathon will certainly promise a unique experience!
+                </p>
+                <p>
+                    Crazy? Definitely! Impossible? Not even close! Many individuals rocked our past events, creating mind blowing and revolutionary concepts! Some of our past events include <a href="http://uk.startupbus.com/">Startup Bus UK 2014</a>, <a href="http://moscow.startupweekend.org/">Startup Weekend Moscow</a>, <a href="https://twitter.com/startuphacksco/">Startup Hacks</a>.
+                </p>
+                <p>
+                    Thanks to our strong partnership with the largest train companies in the UK, including East Midland Trains and Virgin Trains East Coast, hackers will be turning pizza into software whilst on an executive First Class Journey!
+                </p>
+            </div>
+
+            <div style="" class="container col-lg-8 col-lg-offset-2">
+                <div class="container col-sm-12">
+                    <div class="col-sm-6 img-container">
+                        <a  style="width: 100%;" href="http://www.eastmidlandstrains.co.uk/">
+                            <img style="width: 100%;" src="img/index/logo-emt.png"/>
+                        </a>
+                    </div>
+                    <div class="col-sm-6 img-container">
+                        <a  style="width: 100%;" href="http://www.virgintrainseastcost.co.uk/">
+                            <img style="width: 70%;" src="img/index/logo-VTEC.png"/>
+                        </a>
+                    </div>
+                </div>
+            </div>
         </div>
     </section>
 
@@ -169,7 +185,7 @@
             </a>
           </div>
         </div>
-        <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-12">
+        <div style="padding-top:250px;" class="container col-lg-12">
             <h2>Golden Sponsors</h2>
             <div class="container col-sm-12 col-md-8 col-md-offset-2">
                 <div class="col-sm-6 img-container">
@@ -207,15 +223,15 @@
                 </div>
               </div>
           </div>
-        <div style="padding-top:200px; padding-bottom: 200px" class="container col-lg-8 col-lg-offset-2">
+        <div style="padding-top:200px;" class="container col-lg-8 col-lg-offset-2">
             <h2>Transport Sponsors</h2>
             <div class="container col-sm-12">
-                <div class="col-sm-offset-2 col-sm-8 img-container">
+                <div class="col-sm-6 img-container">
                     <a  style="width: 100%;" href="http://www.eastmidlandstrains.co.uk/">
                         <img style="width: 100%;" src="img/index/logo-emt.png"/>
                     </a>
                 </div>
-                <div class="col-sm-offset-2 col-sm-8 img-container">
+                <div class="col-sm-6 img-container">
                     <a  style="width: 100%;" href="http://www.virgintrainseastcost.co.uk/">
                         <img style="width: 70%;" src="img/index/logo-VTEC.png"/>
                     </a>
