first iterations of hacker manual and live

--- a/live.html
+++ b/live.html
@@ -122,7 +122,7 @@
         </div>
     </header>
 
-    <section id="sponsors" class="content-section text-center">
+    <section id="twitter" class="content-section text-center">
         <div style="width: 90%; margin: auto auto;" class="row">
             <div class="tagboard-embed" tgb-slug="HackTheRails/216050"></div>
 <script src="https://static.tagboard.com/public/js/embed.js"></script>
