--- a/trainhackers.html
+++ b/trainhackers.html
@@ -58,7 +58,7 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">Summary</a>
+                        <a class="page-scroll" href="#about">FAQ</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#sponsors">APIs</a>
@@ -103,43 +103,55 @@
         <div id="main">
             <div class="content-area" id="primary">
                 <h1>
-                    About
+                    F.A.Q.
                 </h1>
+                <br>
                 <p>
-                    In this page you will be able to find all information related to the HackTrain 2015 journey.
-                </p>
-                <h1> APIs </h1>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br><br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br><br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br><br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br><br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
-                <br>
+                    <b>
+                        Will food be provided at the hackathon?<br>
+                    </b>
+                    It’s going to be an intense weekend full of sweat, tears and coding late into the night, but don’t worry we have you covered with lots of food and energy drinks throughout the weekend!
+                </p></br>
+                <p>
+                    <b>
+                        Do I need an idea before the event?
+                    </b><br>
+                    It is not required for you to have an idea before the event, but we do recommend you to do some brainstorming before the event. Remember that you’ll be working with extremely brilliant individuals, and we will have some awesome talks at the start of the event to inspire you and get the creativity flowing. But that said, if you happen to have an fantastic idea already, we can’t wait to hear it on the day.
+                </p><br>
+                <p>
+                    <b>
+                        Does the idea have to be train related?
+                    </b><br>
+                    If your idea is not related to trains it would still be valid, however, ideally we want ideas to at least be focused around transport and travel. You will be in the perfect environment to analyze the problems with rail transport system and what’s better we have some of the key stakeholders in charge of the UK rail network ready to listen to your ideas!
+                </p><br>
+                <p>
+                    <b>
+                        How do the teams get assigned?
+                    </b><br>
+                    On the day everyone will have 60 seconds to pitch their idea. Then everyone will get a chance to vote for their favorite ideas and the teams will form around the top ideas. We will try and keep teams to 4 people for the event.
+                </p></br>
+                <p>
+                    <b>
+                        What do I need to bring?
+                    </b><br>
+                    Obviously you need to take your laptop and a comfortable change of clothes for the weekend. On the Saturday night we will be staying in TechCube Edinburgh for the night so you will need to bring a sleeping bag if you want to get a decent night’s rest. 
+                    <br>
+                    Also it should go without saying but please bring deodorant and a toothbrush, otherwise the train rides might get a bit painful for everyone.
+                </p><br>
+                <p>
+                    <b>
+                        Do we have to arrange our own transport back from York?
+                    </b><br>
+                    If you are going to a destination other than London yes. If you are going to London, please read the initial paragraph regarding train travel.
+                </p><br>
+                <p>
+                    <b>
+                        What happens after HackTrain?
+                    </b><br>
+                    We have put together a very strong and talented group of people for this hackathon and you will be left with an amazing new network of friends and plenty of opportunities. And if you build a great product that you want to take further we will definitely support you as much as we can!
+                </p></br>
+
+
             </div>
         </div>
     </div>
