added trainhackers + faq + judging criteria

--- a/trainhackers.html
+++ b/trainhackers.html
@@ -58,13 +58,16 @@
                         <a href="#page-top"></a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#about">FAQ</a>
+                        <a class="page-scroll" href="#faq">FAQ</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#sponsors">APIs</a>
+                        <a class="page-scroll" href="#judging">Judging</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#journey">Judging</a>
+                        <a class="page-scroll" href="#apis">APIs</a>
+                    </li>
+                    <li>
+                        <a class="page-scroll" href="#apis">Other tools</a>
                     </li>
                     <li>
                         <a class="page-scroll" href="#prizes">Prizes</a>
@@ -97,32 +100,37 @@
 </section>
 
 
+<h1 class="section-title">
+    F.A.Q.
+</h1>
 <section class="faqSection fluid-container">
-	<div class="container">
+	<div class="">
 
-        <div id="main">
-            <div class="content-area" id="primary">
-                <h1>
-                    F.A.Q.
-                </h1>
-                <br>
+        <div id="faq">
+            <div class="content-area">
                 <p>
                     <b>
                         Will food be provided at the hackathon?<br>
                     </b>
-                    It’s going to be an intense weekend full of sweat, tears and coding late into the night, but don’t worry we have you covered with lots of food and energy drinks throughout the weekend!
+                    It’s going to be an intense weekend full of surprises, long nights and pivoting - but don’t worry we have you covered with lots of food and energy drinks throughout the weekend!
                 </p></br>
                 <p>
                     <b>
                         Do I need an idea before the event?
                     </b><br>
-                    It is not required for you to have an idea before the event, but we do recommend you to do some brainstorming before the event. Remember that you’ll be working with extremely brilliant individuals, and we will have some awesome talks at the start of the event to inspire you and get the creativity flowing. But that said, if you happen to have an fantastic idea already, we can’t wait to hear it on the day.
+                    It is not required to have an idea, but it is recommended to do some brainstorming before the event. You’ll be working with extremely brilliant individuals, and we will have some awesome talks at the start of the event to inspire you and get the creativity flowing. But that said, if you happen to have an fantastic idea already, we can’t wait to hear it on the day.
                 </p><br>
                 <p>
                     <b>
                         Does the idea have to be train related?
                     </b><br>
                     If your idea is not related to trains it would still be valid, however, ideally we want ideas to at least be focused around transport and travel. You will be in the perfect environment to analyze the problems with rail transport system and what’s better we have some of the key stakeholders in charge of the UK rail network ready to listen to your ideas!
+                </p><br>
+                <p>
+                    <b>
+                        Can I work on something I've already been working on?
+                    </b><br>
+                    No. This would be very unfair for other TrainHackers - Ideas have to be fresh, at most, well researched. If the project has been started previously, even if it was during a hackathon a few weeks ago, it is not possible to re-use it.
                 </p><br>
                 <p>
                     <b>
@@ -148,7 +156,7 @@
                     <b>
                         What happens after HackTrain?
                     </b><br>
-                    We have put together a very strong and talented group of people for this hackathon and you will be left with an amazing new network of friends and plenty of opportunities. And if you build a great product that you want to take further we will definitely support you as much as we can!
+                    We have put together a very strong and talented group of people for this hackathon and you will be left with an amazing new network of friends and plenty of opportunities. And if you build a great product that you want to take further we will definitely support you as much as we can! We will host a few meetups in the following months as well - we'll keep you updated!
                 </p></br>
 
 
@@ -157,6 +165,110 @@
     </div>
 		<div class="clear"></div>
 	</div>
+</section>
+
+<h1 class="section-title">
+    Judging Criteria
+</h1>
+<section class="faqSection fluid-container">
+    <div class="">
+
+        <div id="judging">
+            <div class="content-area">
+                <p>
+                  <strong>
+                    Business Model
+                  </strong>
+                  - 25%
+                </p>
+                <p>
+                  Can this idea make money? Is there positive customer growth or revenue? Is there a customer acquisition / rollout strategy? Has a revenue model been defined and is it realistic? Is the idea/team ready for capital and execution? Would you invest in this company at this point?
+                </p>
+                  <br />
+                <p>
+                  <strong>
+                    Customer Validation (for USP+Hypotheses) 
+                  </strong>
+                  - 25%
+                </p>
+                <p>
+                  Did the team identify customers (demographic, location etc)? Did the team get out and talk to customers? What is the value proposition to customers? What channels of communication are used? Product/Market fit? Did they get a paying customer/sign a deal? Did they find a partner?
+                </p>
+                  <br />
+                <p>
+                  <strong>
+                    Scalability
+                  </strong>
+                  - 10%
+                </p>
+                <p>
+                  Business Perspective:
+                </p>
+                <p>
+                  Did the team identify their market? Does it have the potential to scale? Have they designed their idea with scalability in mind?
+                </p>
+                <p>
+                  Technical Perspective:
+                </p>
+                <p>
+                  Does the team uses appropriate technologies / frameworks? Is it simple to setup or get it running? Are the 
+                  <em>
+                    system 
+                  </em>
+                  requirements appropriate? Did the team build with scalability in mind? 
+                  <em>
+                    Does it work in my browser/device
+                  </em>
+                  ?
+                </p>
+                  <br />
+                <p>
+                  <strong>
+                    MVP/Prototype
+                  </strong>
+                  - 30%
+                </p>
+                <p>
+                  Business Perspective:
+                </p>
+                <p>
+                  Does the MVP express well their solution for the problem? Would people use it? Did they build their MVP with their customer in mind? Is it memorable? Does the project have appropriate graphics? Is it intuitive and easy to use? Do you 
+                  <em>
+                    like 
+                  </em>
+                  how the project is structured, from a user&rsquo;s point of view?
+                </p>
+                <p>
+                  Technical perspective:
+                </p>
+                <p>
+                  Does the project meet its goals? Can it be used by everyone? Does it work properly? Does it have enough working features? Are the features implemented the ones that define this project (implementing things that every single app/website/project out there has such as login is not considered useful in this context).
+                </p>
+                  <br />
+                <p>
+                  <strong>
+                    Pitch/presentation
+                  </strong>
+                  - 10%
+                </p>
+                <p>
+                  Was the idea well delivered? Did 
+                  <strong>
+                    the team
+                  </strong>
+                  
+                  <em>
+                    convince 
+                  </em>
+                  you about how awesome their project is? This is about rating the quality of the presentation in the perspective of an investor/expert. (The reason why this is only 10% is because the pitch will actually influence all the other points).
+                </p>
+                <h2>
+                  <br />
+                  <br />
+                </h2>
+            </div>
+        </div>
+    </div>
 </section>
 
   <script type="text/javascript" src="js/external/jquery.js"></script>
